--- a/SemesterProject_2022/src/main/resources/com/hitfit/SignUp_Personal_Info.fxml
+++ b/SemesterProject_2022/src/main/resources/com/hitfit/SignUp_Personal_Info.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="Main" onMouseDragged="#dragWindow" onMousePressed="#pressedWindow" prefHeight="600.0" prefWidth="1024.0" stylesheets="@CSS/SignUp.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.initial_screen.SignUp_Controller">
+<AnchorPane fx:id="Main" onMouseDragged="#dragWindow" onMousePressed="#pressedWindow" prefHeight="600.0" prefWidth="1024.0" stylesheets="@CSS/SignUp.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.initial_screen.SignUp_Controller">
     <children>
         <HBox id="hbox" fx:id="hbox" layoutX="403.0" layoutY="568.0" prefHeight="37.0" prefWidth="620.0">
             <children>
@@ -46,39 +46,40 @@
                   <Font name="System Italic" size="10.0" />
                </font></Label>
                 <TextField id="t1" fx:id="pNumber" layoutX="79.0" layoutY="184.0" onMouseClicked="#clearTab2" prefHeight="30.0" prefWidth="199.0" />
-                <Label id="l2" layoutX="326.0" layoutY="161.0" text="NIC Number" textFill="#eaf6ff">
-               <font>
-                  <Font name="System Italic" size="10.0" />
-               </font></Label>
-                <TextField id="t2" fx:id="cnic" layoutX="322.0" layoutY="184.0" onMouseClicked="#clearTab2" prefHeight="30.0" prefWidth="199.0" />
                 <Label layoutX="79.0" layoutY="241.0" text="Address (Optional)" textFill="#eaf6ff">
                <font>
                   <Font name="System Italic" size="10.0" />
                </font></Label>
                 <TextField id="t3" fx:id="address" layoutX="79.0" layoutY="264.0" onMouseClicked="#clearTab2" prefHeight="30.0" prefWidth="439.0" />
-                <Label id="l5" layoutX="79.0" layoutY="322.0" text="Date Of Birth" textFill="#eaf6ff">
+                <Label id="l5" layoutX="79.0" layoutY="398.0" text="Date Of Birth" textFill="#eaf6ff">
                <font>
                   <Font name="System Italic" size="10.0" />
                </font></Label>
-            <DatePicker fx:id="date" layoutX="79.0" layoutY="344.0" onMouseClicked="#clearTab2" prefHeight="30.0" prefWidth="199.0" promptText="Date of Birth" style="-fx-background-color: transparent;" />
-            <Label layoutX="326.0" layoutY="322.0" text="Gender" textFill="#eaf6ff">
+            <DatePicker fx:id="date" layoutX="79.0" layoutY="420.0" onMouseClicked="#clearTab2" prefHeight="30.0" prefWidth="199.0" promptText="Date of Birth" style="-fx-background-color: transparent;" />
+            <Label layoutX="343.0" layoutY="162.0" text="Gender" textFill="#eaf6ff">
                <font>
                   <Font name="System Italic" size="10.0" />
                </font></Label>
-            <RadioButton fx:id="male" layoutX="322.0" layoutY="344.0" mnemonicParsing="false" text="Male" textFill="#eaf6ff">
+            <RadioButton fx:id="male" layoutX="343.0" layoutY="191.0" mnemonicParsing="false" text="Male" textFill="#eaf6ff">
                <padding>
                   <Insets right="20.0" />
                </padding>
                <toggleGroup>
                   <ToggleGroup fx:id="Group1" />
                </toggleGroup>
+               <font>
+                  <Font size="10.0" />
+               </font>
             </RadioButton>
-            <RadioButton fx:id="female" layoutX="422.0" layoutY="344.0" mnemonicParsing="false" text="Female" textFill="#eaf6ff" toggleGroup="$Group1" />
-            <Label layoutX="79.0" layoutY="402.0" text="Weight lb/kg" textFill="#eaf6ff">
+            <RadioButton fx:id="female" layoutX="419.0" layoutY="193.0" mnemonicParsing="false" text="Female" textFill="#eaf6ff" toggleGroup="$Group1">
+               <font>
+                  <Font size="10.0" />
+               </font></RadioButton>
+            <Label layoutX="332.0" layoutY="322.0" text="Weight (KG)" textFill="#eaf6ff">
                <font>
                   <Font name="System Italic" size="10.0" />
                </font></Label>
-            <TextField id="t6" fx:id="weight" layoutX="79.0" layoutY="424.0" onMouseClicked="#clearTab2" prefHeight="30.0" prefWidth="199.0" />
+            <TextField id="t6" fx:id="weight" layoutX="332.0" layoutY="344.0" onMouseClicked="#clearTab2" prefHeight="30.0" prefWidth="199.0" />
             <Label fx:id="phoneNoValidation" layoutX="300.0" layoutY="400.0" textFill="#eaf6ff">
                <font>
                   <Font name="System Italic" size="13.0" />
@@ -99,7 +100,7 @@
                   <Font name="System Italic" size="13.0" />
                </font>
             </Label>
-                <Button id="next" layoutX="79.0" layoutY="482.0" mnemonicParsing="false" onAction="#paymentForm" prefHeight="26.0" prefWidth="150.0" text="Next" textFill="#eaf6ff">
+                <Button id="next" layoutX="79.0" layoutY="483.0" mnemonicParsing="false" onAction="#paymentForm" prefHeight="26.0" prefWidth="150.0" text="Next" textFill="#eaf6ff">
                     <padding>
                         <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
                     </padding></Button>
@@ -107,15 +108,12 @@
                     <font>
                         <Font size="14.0" />
                     </font></Text>
-            <Button fx:id="exit" layoutX="561.0" layoutY="14.0" minWidth="43.0" mnemonicParsing="false" onAction="#close" prefHeight="30.0" prefWidth="50.0" style="-fx-background-color: transparent;">
-               <graphic>
-                  <ImageView fitHeight="30.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/icons8-close-window-96.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
+            <Label layoutX="79.0" layoutY="322.0" text="Height (Meters)" textFill="#eaf6ff">
+               <font>
+                  <Font name="System Italic" size="10.0" />
+               </font>
+            </Label>
+            <TextField id="t6" fx:id="height" layoutX="79.0" layoutY="344.0" onMouseClicked="#clearTab2" prefHeight="30.0" prefWidth="199.0" />
             </children>
         </AnchorPane>
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
