--- a/SemesterProject_2022/src/main/resources/com/hitfit/CustomerPanel.fxml
+++ b/SemesterProject_2022/src/main/resources/com/hitfit/CustomerPanel.fxml
@@ -13,38 +13,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.customer.CustomerPanel_Controller">
+<AnchorPane prefHeight="600.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.customer.CustomerPanel_Controller">
     <children>
         <StackPane fx:id="stackPane" layoutX="185.0" layoutY="35.0" prefHeight="583.0" prefWidth="1044.0" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="185.0" AnchorPane.rightAnchor="-205.0" AnchorPane.topAnchor="35.0" />
         <AnchorPane fx:id="stageBorderPane" prefHeight="34.0" prefWidth="799.0" stylesheets="@CSS/Main_App.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <children>
-                <Button fx:id="closeBtn" layoutX="749.3333333333334" layoutY="-1.0" mnemonicParsing="false" onAction="#close" prefHeight="35.0" prefWidth="50.0" stylesheets="@CSS/Main_App.css" AnchorPane.rightAnchor="0.0">
-                    <graphic>
-                        <ImageView fitHeight="22.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@BorderIcons/icons8-close-32 (1).png" />
-                            </image>
-                        </ImageView>
-                    </graphic>
-                </Button>
-                <Button fx:id="maxBtn" layoutX="702.0" layoutY="-1.0" mnemonicParsing="false" onAction="#max" prefHeight="35.0" prefWidth="50.0" AnchorPane.rightAnchor="50.0">
-                    <graphic>
-                        <ImageView fitHeight="16.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@BorderIcons/icons8-maximize-button-48.png" />
-                            </image>
-                        </ImageView>
-                    </graphic>
-                </Button>
-                <Button fx:id="restoreBtn" layoutX="652.0" layoutY="-1.0" mnemonicParsing="false" onAction="#restore" prefHeight="35.0" prefWidth="50.0" AnchorPane.rightAnchor="100.0">
-                    <graphic>
-                        <ImageView fitHeight="24.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@BorderIcons/icons8-subtract-30.png" />
-                            </image>
-                        </ImageView>
-                    </graphic>
-                </Button>
                 <Button fx:id="menuBarBtn" layoutX="1.0" mnemonicParsing="false" onAction="#menuBar" prefHeight="35.0" prefWidth="52.0" AnchorPane.leftAnchor="0.0">
                     <graphic>
                         <ImageView fitHeight="21.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
@@ -72,7 +45,7 @@
                         <Font size="9.0" />
                     </font>
                 </Text>
-                <Text fx:id="CustomerName" fill="WHITE" layoutX="75.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Name" AnchorPane.bottomAnchor="480.0" AnchorPane.topAnchor="70.0">
+                <Text fx:id="CustomerName" fill="WHITE" layoutX="75.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" AnchorPane.bottomAnchor="480.0" AnchorPane.topAnchor="70.0">
                     <font>
                         <Font name="System Bold" size="11.0" />
                     </font>
@@ -131,63 +104,6 @@
                             </styleClass>
                             <VBox.margin>
                                 <Insets top="50.0" />
-                            </VBox.margin>
-                        </Button>
-                        <Button fx:id="membersView" graphicTextGap="0.0" mnemonicParsing="false" onAction="#BMIBtn" prefHeight="25.0" prefWidth="186.0" text="BMI View">
-                            <graphic>
-                                <ImageView fitHeight="25.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" translateX="-27.0">
-                                    <image>
-                                        <Image url="@BorderIcons/icons8-weight-96.png" />
-                                    </image>
-                                </ImageView>
-                            </graphic>
-                            <font>
-                                <Font size="10.0" />
-                            </font>
-                            <styleClass>
-                                <String fx:value="navButtons" />
-                                <String fx:value="text" />
-                            </styleClass>
-                            <VBox.margin>
-                                <Insets top="10.0" />
-                            </VBox.margin>
-                        </Button>
-                        <Button fx:id="memberships" graphicTextGap="0.0" mnemonicParsing="false" onAction="#QueriesBtn" prefHeight="25.0" prefWidth="186.0" text="Queries Form">
-                            <graphic>
-                                <ImageView fitHeight="24.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true" translateX="-18.0">
-                                    <image>
-                                        <Image url="@BorderIcons/Queries.png" />
-                                    </image>
-                                </ImageView>
-                            </graphic>
-                            <font>
-                                <Font size="10.0" />
-                            </font>
-                            <styleClass>
-                                <String fx:value="navButtons" />
-                                <String fx:value="text" />
-                            </styleClass>
-                            <VBox.margin>
-                                <Insets top="10.0" />
-                            </VBox.margin>
-                        </Button>
-                        <Button fx:id="employees" graphicTextGap="0.0" mnemonicParsing="false" onAction="#EquipmentsBtn" prefHeight="25.0" prefWidth="186.0" text="Equipments">
-                            <graphic>
-                                <ImageView fitHeight="21.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true" translateX="-22.0">
-                                    <image>
-                                        <Image url="@BorderIcons/Equipments.png" />
-                                    </image>
-                                </ImageView>
-                            </graphic>
-                            <font>
-                                <Font size="10.0" />
-                            </font>
-                            <styleClass>
-                                <String fx:value="navButtons" />
-                                <String fx:value="text" />
-                            </styleClass>
-                            <VBox.margin>
-                                <Insets top="10.0" />
                             </VBox.margin>
                         </Button>
                         <Button fx:id="equipments" graphicTextGap="0.0" mnemonicParsing="false" onAction="#FaqBtn" prefHeight="25.0" prefWidth="186.0" text="F.A.Q">
