--- a/SemesterProject_2022/src/main/resources/com/hitfit/LoginSignUp.fxml
+++ b/SemesterProject_2022/src/main/resources/com/hitfit/LoginSignUp.fxml
@@ -2,14 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="pane" onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="525.0" prefWidth="354.0" stylesheets="@CSS/LoginSignUp.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.initial_screen.LoginSignUp_Controller">
+<AnchorPane fx:id="pane" onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="525.0" prefWidth="354.0" stylesheets="@CSS/LoginSignUp.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.initial_screen.LoginSignUp_Controller">
    <children>
       <Text fx:id="h1" fill="#ffffff" layoutX="80.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WELCOME" textAlignment="CENTER" wrappingWidth="186.35888671875">
          <font>
@@ -21,12 +19,12 @@
             <Font size="10.0" />
          </font>
       </Text>
-      <Button fx:id="button1" layoutX="53.0" layoutY="122.0" mnemonicParsing="false" onAction="#switchToAdminLogin" prefHeight="26.0" prefWidth="243.0" text="Login As Staff">
+      <Button fx:id="button1" layoutX="53.0" layoutY="122.0" mnemonicParsing="false" onAction="#switchToAdminLogin" prefHeight="26.0" prefWidth="243.0" text="Login as Admin">
          <padding>
             <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
          </padding>
       </Button>
-      <Button fx:id="button2" layoutX="53.0" layoutY="204.0" mnemonicParsing="false" onAction="#switchToMemberLogin" prefHeight="26.0" prefWidth="243.0" text="Login As Member" textFill="WHITE">
+      <Button fx:id="button2" layoutX="53.0" layoutY="204.0" mnemonicParsing="false" onAction="#switchToMemberLogin" prefHeight="26.0" prefWidth="243.0" text="Login as Member" textFill="WHITE">
          <padding>
             <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
          </padding>
@@ -59,15 +57,6 @@
             <Font size="8.0" />
          </font>
       </Text>
-      <Button fx:id="exit" layoutX="315.0" layoutY="5.0" minWidth="28.0" mnemonicParsing="false" onAction="#close" prefHeight="30.0" prefWidth="28.0" style="-fx-background-color: transparent;">
-         <graphic>
-            <ImageView fitHeight="30.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@Images/icons8-close-window-96.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
    </children>
    <padding>
       <Insets bottom="10.0" top="25.0" />
