--- a/SemesterProject_2022/src/main/resources/com/hitfit/SignUp.fxml
+++ b/SemesterProject_2022/src/main/resources/com/hitfit/SignUp.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="Main" onMouseDragged="#dragWindow" onMousePressed="#pressedWindow" prefHeight="617.0" prefWidth="1000.0" stylesheets="@CSS/SignUp.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.initial_screen.SignUp_Controller">
+<AnchorPane fx:id="Main" onMouseDragged="#dragWindow" onMousePressed="#pressedWindow" prefHeight="617.0" prefWidth="1000.0" stylesheets="@CSS/SignUp.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.initial_screen.SignUp_Controller">
    <children>
       <HBox id="hbox" fx:id="hbox" layoutX="427.0" layoutY="586.0" prefHeight="37.0" prefWidth="576.0">
          <children>
@@ -26,12 +26,12 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Button>
-            <Button fx:id="button2" mnemonicParsing="false" prefHeight="37.0" prefWidth="209.0" text="Personal Info">
+            <Button fx:id="button2" mnemonicParsing="false" prefHeight="37.0" prefWidth="209.0" text="Personal Info" textFill="#4c4c4c">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Button>
-            <Button fx:id="button3" mnemonicParsing="false" prefHeight="37.0" prefWidth="159.0" text="Payment Info">
+            <Button fx:id="button3" mnemonicParsing="false" prefHeight="37.0" prefWidth="159.0" text="Payment Info" textFill="#4c4c4c">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -84,9 +84,8 @@
             <TextField id="t2" fx:id="lName" layoutX="322.0" layoutY="221.0" onMouseClicked="#clear" prefHeight="30.0" prefWidth="199.0" />
             <TextField id="t3" fx:id="uName" layoutX="79.0" layoutY="287.0" onMouseClicked="#clear" prefHeight="30.0" prefWidth="199.0" />
             <TextField id="t4" fx:id="email" layoutX="322.0" layoutY="287.0" onMouseClicked="#clear" prefHeight="30.0" prefWidth="199.0" />
-            <TextField id="t5" fx:id="password" layoutX="79.0" layoutY="357.0" onMouseClicked="#clear" prefHeight="30.0" prefWidth="199.0" />
             <PasswordField id="t6" fx:id="cPassword" layoutX="322.0" layoutY="357.0" onMouseClicked="#clear" prefHeight="30.0" prefWidth="199.0" />
-            <Label id="l1" layoutX="89.0" layoutY="203.0" text="FirstName" textFill="#eaf6ff">
+            <Label id="l1" layoutX="89.0" layoutY="203.0" text="First Name" textFill="#eaf6ff">
                <font>
                   <Font name="System Italic" size="10.0" />
                </font></Label>
@@ -139,16 +138,7 @@
                   <Image url="@Images/giphy.gif" />
                </image>
             </ImageView>
-            <Button fx:id="exit" layoutX="561.0" layoutY="14.0" minWidth="28.0" mnemonicParsing="false" onAction="#close" prefHeight="30.0" prefWidth="50.0" style="-fx-background-color: transparent;">
-               <graphic>
-                  <ImageView fitHeight="30.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/icons8-close-window-96.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Label id="l1" layoutX="334.0" layoutY="201.0" text="LastName" textFill="#eaf6ff">
+            <Label id="l1" layoutX="334.0" layoutY="201.0" text="Last Name" textFill="#eaf6ff">
                <font>
                   <Font name="System Italic" size="10.0" />
                </font>
@@ -163,6 +153,7 @@
                   </ImageView>
                </graphic>
             </Button>
+            <PasswordField id="t6" fx:id="password" layoutX="79.0" layoutY="357.0" onMouseClicked="#clear" prefHeight="30.0" prefWidth="199.0" />
          </children>
       </AnchorPane>
    </children>
