--- a/SemesterProject_2022/src/main/resources/com/hitfit/membersDetailCard.fxml
+++ b/SemesterProject_2022/src/main/resources/com/hitfit/membersDetailCard.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="Main" onMouseDragged="#dragWindow" onMousePressed="#pressedWindow" prefHeight="513.0" prefWidth="327.0" styleClass="background" stylesheets="@CSS/Main_App.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.members_only.MembersDetailCard_Controller">
+<AnchorPane fx:id="Main" onMouseDragged="#dragWindow" onMousePressed="#pressedWindow" prefHeight="513.0" prefWidth="327.0" styleClass="background" stylesheets="@CSS/Main_App.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.members_only.MembersDetailCard_Controller">
    <children>
       <Text fill="WHITE" layoutX="80.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Members Detail Card" textAlignment="CENTER">
          <font>
@@ -79,5 +79,11 @@
       <Text fx:id="username" fill="WHITE" layoutX="109.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ssulemans37" />
       <Text fx:id="packagetype" fill="WHITE" layoutX="99.0" layoutY="366.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Starter" />
       <Text fx:id="packageprice" fill="WHITE" layoutX="99.0" layoutY="394.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rs. 4500" />
+      <Text fill="WHITE" layoutX="167.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Height">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Text>
+      <Text fx:id="height" fill="WHITE" layoutX="233.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 m" />
    </children>
 </AnchorPane>
