--- a/SemesterProject_2022/src/main/resources/com/hitfit/AccountSettingsPanel.fxml
+++ b/SemesterProject_2022/src/main/resources/com/hitfit/AccountSettingsPanel.fxml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="600.0" stylesheets="@CSS/Main_App.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.AccontSettingsPanel_Controller">
+<AnchorPane prefHeight="500.0" prefWidth="600.0" stylesheets="@CSS/Main_App.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.AccontSettingsPanel_Controller">
     <children>
         <BorderPane layoutX="85.0" layoutY="-28.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -72,13 +67,14 @@
                                                 <Font size="16.0" />
                                              </font>
                                           </Text>
-                                          <Text fx:id="nameField" fill="#4a4a4a" layoutX="108.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ayaan Ali">
+                                          <Text fx:id="nameField" fill="#4a4a4a" layoutX="108.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ayaan Ali" wrappingWidth="82.50439453125">
                                              <font>
                                                 <Font size="13.0" />
                                              </font>
                                           </Text>
-                                          <TextField fx:id="editName" layoutX="100.0" layoutY="49.0" onKeyPressed="#setData" promptText="Enter New Name" visible="false" />
-                                          <Button alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="100.0" layoutY="96.0" mnemonicParsing="false" onAction="#editNameButton" prefHeight="30.0" prefWidth="87.0" stylesheets="@CSS/Main_App.css" text="Edit" textFill="WHITE">
+                                          <TextField fx:id="editFirstName" layoutX="100.0" layoutY="49.0" onKeyPressed="#setData" promptText="Enter First Name" visible="false" />
+                                           <TextField fx:id="editLastName" layoutX="100.0" layoutY="100.0" onKeyPressed="#setData" promptText="Enter Last Name" visible="false" />
+                                          <Button fx:id="editNameBtn" alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="100.0" layoutY="96.0" mnemonicParsing="false" onAction="#editNameButton" prefHeight="30.0" prefWidth="87.0" stylesheets="@CSS/Main_App.css" text="Edit" textFill="WHITE">
                                              <styleClass>
                                                 <String fx:value="curve" />
                                                 <String fx:value="buttoncolor" />
@@ -109,7 +105,7 @@
                                                 <Font size="13.0" />
                                              </font>
                                           </Text>
-                                          <Button alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="100.0" layoutY="225.3333282470703" mnemonicParsing="false" onAction="#editPhoneButton" prefHeight="30.0" prefWidth="87.0" stylesheets="@CSS/Main_App.css" text="Edit" textFill="WHITE">
+                                          <Button fx:id="editPhoneBtn" alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="100.0" layoutY="225.3333282470703" mnemonicParsing="false" onAction="#editPhoneButton" prefHeight="30.0" prefWidth="87.0" stylesheets="@CSS/Main_App.css" text="Edit" textFill="WHITE">
                                              <styleClass>
                                                 <String fx:value="curve" />
                                                 <String fx:value="buttoncolor" />
@@ -146,7 +142,7 @@
                                                 <Font size="13.0" />
                                              </font>
                                           </Text>
-                                          <Button alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="100.0" layoutY="420.6666564941406" mnemonicParsing="false" onAction="#editEmailButton" prefHeight="30.0" prefWidth="87.0" stylesheets="@CSS/Main_App.css" text="Edit" textFill="WHITE">
+                                          <Button fx:id="editEmailBtn" alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="100.0" layoutY="420.6666564941406" mnemonicParsing="false" onAction="#editEmailButton" prefHeight="30.0" prefWidth="87.0" stylesheets="@CSS/Main_App.css" text="Edit" textFill="WHITE">
                                              <styleClass>
                                                 <String fx:value="curve" />
                                                 <String fx:value="buttoncolor" />
@@ -177,7 +173,7 @@
                                                 <Font size="13.0" />
                                              </font>
                                           </Text>
-                                          <Button alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="100.0" layoutY="570.0" mnemonicParsing="false" onAction="#updatePasswordButton" prefHeight="32.0" prefWidth="103.0" stylesheets="@CSS/Main_App.css" text="Update" textFill="WHITE">
+                                          <Button fx:id="updatePasswordButton" alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="100.0" layoutY="570.0" mnemonicParsing="false" onAction="#updatePasswordButton" prefHeight="32.0" prefWidth="103.0" stylesheets="@CSS/Main_App.css" text="Update" textFill="WHITE">
                                              <styleClass>
                                                 <String fx:value="curve" />
                                                 <String fx:value="buttoncolor" />
