--- a/SemesterProject_2022/src/main/resources/com/hitfit/MembersPanel.fxml
+++ b/SemesterProject_2022/src/main/resources/com/hitfit/MembersPanel.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="583.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.members_only.MembersPanel_Controller">
+<AnchorPane prefHeight="583.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.members_only.MembersPanel_Controller">
     <children>
         <BorderPane layoutX="85.0" layoutY="-28.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -45,13 +45,13 @@
                      <children>
                         <TableView fx:id="membersView" fixedCellSize="0.0" prefHeight="232.0" prefWidth="765.0" stylesheets="@CSS/Main_App.css" AnchorPane.bottomAnchor="112.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="19.0" AnchorPane.topAnchor="0.0">
                            <columns>
-                              <TableColumn id="firstcol" fx:id="Id" prefWidth="40.0" text="Id" />
+                              <TableColumn id="firstcol" fx:id="Id" prefWidth="40.0" text="ID" />
                               <TableColumn id="firstcol" fx:id="FirstName" prefWidth="120.0" text="First Name" />
                               <TableColumn fx:id="LastName" prefWidth="120.0" text="Last Name" />
-                              <TableColumn fx:id="nic" prefWidth="120.0" styleClass="transparent_col" text="NIC" />
+                              <TableColumn fx:id="isActive" prefWidth="120.0" styleClass="transparent_col" text="Active" />
                               <TableColumn fx:id="email" prefWidth="250.0" text="Email" />
-                              <TableColumn fx:id="plan" minWidth="0.0" prefWidth="120.0" text="Monthly Plan" />
                               <TableColumn fx:id="phone" minWidth="0.0" prefWidth="120.0" text="Phone No" />
+                              <TableColumn fx:id="plan" minWidth="0.0" prefWidth="120.0" text="Membership" />
                               <TableColumn fx:id="action" minWidth="0.0" prefWidth="120.0" text="Action" />
                            </columns>
                         </TableView>
@@ -110,7 +110,7 @@
                                                 <Insets bottom="65.0" left="-400.0" right="45.0" />
                                              </FlowPane.margin>
                                           </Text>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Sort by Id">
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Sort by ID">
                                              <FlowPane.margin>
                                                 <Insets bottom="65.0" right="65.0" />
                                              </FlowPane.margin>
