--- a/SemesterProject_2022/src/main/resources/com/hitfit/TransactionPanel.fxml
+++ b/SemesterProject_2022/src/main/resources/com/hitfit/TransactionPanel.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="583.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.transactions.TransactionsPanel_Controller">
+<AnchorPane prefHeight="583.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hitfit.controller.transactions.TransactionsPanel_Controller">
     <children>
         <BorderPane layoutX="85.0" layoutY="-28.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -45,9 +45,9 @@
                             <children>
                                 <TableView fx:id="transactionView" fixedCellSize="0.0" prefHeight="218.0" prefWidth="811.0" stylesheets="@CSS/Main_App.css" AnchorPane.bottomAnchor="66.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="0.0">
                                     <columns>
-                                        <TableColumn id="firstcol" fx:id="TransactionId" prefWidth="145.33335876464844" text="Transaction Id" />
-                                        <TableColumn id="firstcol" fx:id="BankOwnerName" prefWidth="130.0" text="Bank Owner Name" />
-                                        <TableColumn fx:id="BankName" prefWidth="270.0" text="Bank Name" />
+                                        <TableColumn id="firstcol" fx:id="TransactionId" prefWidth="145.33335876464844" text="Transac ID" />
+                                        <TableColumn id="firstcol" fx:id="PaymentMethod" prefWidth="130.0" text="Payment Method" />
+                                        <TableColumn fx:id="AccountName" prefWidth="270.0" text="Account Name" />
                                         <TableColumn fx:id="Amount" styleClass="transparent_col" text="Amount" />
                                         <TableColumn fx:id="TransactionDate" prefWidth="250.0" text="Transaction Date" />
                               <TableColumn fx:id="Status" prefWidth="120.0" text="Status" />
@@ -109,7 +109,7 @@
                                                                 <Insets bottom="65.0" left="-400.0" right="45.0" />
                                                             </FlowPane.margin>
                                                         </Text>
-                                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Sort by Id">
+                                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Sort by ID">
                                                             <FlowPane.margin>
                                                                 <Insets bottom="65.0" right="65.0" />
                                                             </FlowPane.margin>
